[gd_scene load_steps=28 format=2]

[ext_resource path="res://Tunnels/level1.tres" type="Material" id=1]
[ext_resource path="res://Tunnels/level2.tres" type="Material" id=2]
[ext_resource path="res://Tunnels/level3.tres" type="Material" id=3]
[ext_resource path="res://Scenes/Characters/Hans/Hans.tscn" type="PackedScene" id=4]
[ext_resource path="res://Other/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Other/Score.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Other/Tunnels.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Other/Main.gd" type="Script" id=8]
[ext_resource path="res://Other/fonts/BASKVILL.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/Other/End.gd" type="Script" id=10]
[ext_resource path="res://Other/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Scripts/Other/Level.gd" type="Script" id=12]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 4
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 75
outline_size = 2
outline_color = Color( 0.0823529, 0.560784, 0.74902, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.411765, 0.764706, 0.941176, 0.666667 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.411765, 0.764706, 0.941176, 0.666667 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.411765, 0.764706, 0.941176, 0.439216 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.411765, 0.764706, 0.941176, 0.466667 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.411765, 0.764706, 0.941176, 0.666667 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.411765, 0.764706, 0.941176, 0.278431 )

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="Ground" type="CSGBox" parent="."]
transform = Transform( 5000, 0, 0, 0, 1, 0, 0, 0, 100, 0, -32, 0 )
use_collision = true
collision_layer = 4
material = SubResource( 1 )

[node name="Hans" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 3765.85, -32, 0 )
collision_mask = 6

[node name="CameraPivot" type="Spatial" parent="Hans"]
transform = Transform( 0.5, -2.40383e-09, -3.54703e-11, 2.40383e-09, 0.499782, 0.0147546, -3.54703e-11, -0.0147546, 0.499782, -9.95693e-07, 10.1862, -6.11108 )

[node name="Camera" type="Camera" parent="Hans/CameraPivot"]
transform = Transform( -2, 3.75003e-07, -4.04612e-07, 2.98925e-07, 1.96953, 0.347809, 4.63662e-07, 0.347809, -1.96953, -3.54834e-06, 11.652, -21.7788 )
far = 500.0

[node name="Tunnels" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )
script = ExtResource( 7 )

[node name="level0" type="Spatial" parent="Tunnels"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2500, 0, 0 )

[node name="torus1" type="CSGTorus" parent="Tunnels/level0"]
transform = Transform( -1.95505e-06, 2800, -5.24537e-07, 0, -0.000122392, -12, -12, -0.000456178, 8.54579e-14, 0, 0, 0 )
use_collision = true
collision_layer = 2147483653
collision_mask = 0
sides = 6
smooth_faces = false
material = ExtResource( 1 )

[node name="lights" type="Spatial" parent="Tunnels/level0/torus1"]

[node name="light1" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -7.27325e-10, -5.91752e-16, -0.0833333, 0.000357143, -8.36312e-13, -3.11714e-12, -1.95141e-10, -0.0833333, 5.93456e-16, -3.63798e-12, 0.39, 0 )
omni_range = 500.0

[node name="light2" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -7.27325e-10, -5.91753e-16, -0.0833333, 0.000357143, -8.36321e-13, -3.11714e-12, -1.95143e-10, -0.0833333, 5.93457e-16, 0, 0.26, 0 )
omni_range = 500.0

[node name="light3" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -7.27326e-10, -5.95511e-16, -0.0833333, 0.000357143, -8.36312e-13, -3.11715e-12, -1.95141e-10, -0.0833333, 5.97215e-16, 2.38419e-07, 0.13, 0 )
omni_range = 500.0

[node name="light4" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -7.27325e-10, -5.95511e-16, -0.0833333, 0.000357143, -8.36312e-13, -3.11714e-12, -1.95141e-10, -0.0833333, 5.97215e-16, 0, 0, 0 )
omni_range = 500.0

[node name="light5" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -1.85326e-06, -1.50782e-12, -0.0833333, 0.000357143, -8.36312e-13, -7.94254e-09, -1.95141e-10, -0.0833333, 1.51216e-12, 0, -0.13, 0 )
omni_range = 500.0

[node name="light6" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -0.000195129, 0.000325794, -0.0833325, 0.000357142, -5.99725e-13, -8.36273e-07, -7.63008e-07, -0.0833327, -0.000325793, 0, -0.26, 0 )
omni_range = 500.0

[node name="light7" type="OmniLight" parent="Tunnels/level0/torus1/lights"]
transform = Transform( -0.00019513, -3.5373e-10, -0.0833331, 0.000357142, -8.38364e-13, -8.36271e-07, -1.94791e-10, -0.0833333, 3.54187e-10, 0, -0.39, 2.98023e-08 )
omni_range = 500.0

[node name="level2" type="Spatial" parent="Tunnels"]

[node name="torus2" type="CSGTorus" parent="Tunnels/level2"]
transform = Transform( -1.95505e-06, 2800, -5.24537e-07, 0, -0.000122392, -12, -12, -0.000456178, 8.54579e-14, 0, 0, 0 )
use_collision = true
collision_layer = 4
sides = 6
smooth_faces = false
material = ExtResource( 2 )

[node name="lights" type="Spatial" parent="Tunnels/level2/torus2"]

[node name="light8" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -7.27325e-10, -5.91752e-16, -0.0833333, 0.000357143, -8.36317e-13, -3.11714e-12, -1.95142e-10, -0.0833333, 5.93456e-16, -1.71791e-06, 0.435191, -4.76837e-07 )
omni_range = 600.0

[node name="light9" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -7.27325e-10, -5.91753e-16, -0.0833333, 0.000357143, -8.36329e-13, -3.11714e-12, -1.95145e-10, -0.0833333, 5.93457e-16, -2.62571e-06, 0.329071, -7.45058e-07 )
omni_range = 600.0

[node name="light10" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -7.27325e-10, -5.95511e-16, -0.0833333, 0.000357143, -8.36317e-13, -3.11714e-12, -1.95142e-10, -0.0833333, 5.97215e-16, -2.3146e-06, 0.190887, -6.25849e-07 )
omni_range = 600.0

[node name="light11" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -7.27325e-10, -5.95511e-16, -0.0833333, 0.000357143, -8.36317e-13, -3.11714e-12, -1.95142e-10, -0.0833333, 5.97215e-16, -3.04557e-06, 0.0801153, -8.04663e-07 )
omni_range = 600.0

[node name="light12" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -1.85325e-06, -1.50782e-12, -0.0833333, 0.000357143, -8.36317e-13, -7.9425e-09, -1.95142e-10, -0.0833333, 1.51216e-12, 2.76291e-07, -0.137268, 5.96046e-08 )
omni_range = 600.0

[node name="light13" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -0.000195128, 0.000325794, -0.0833325, 0.000357142, -6.12392e-13, -8.36269e-07, -7.63007e-07, -0.0833327, -0.000325793, -1.91715e-06, -0.209568, -5.06639e-07 )
omni_range = 600.0

[node name="light14" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -0.00019513, -3.5373e-10, -0.0833331, 0.000357142, -8.38373e-13, -8.36271e-07, -1.94793e-10, -0.0833333, 3.54187e-10, -2.94329e-06, -0.312575, -7.7486e-07 )
omni_range = 600.0

[node name="light15" type="OmniLight" parent="Tunnels/level2/torus2/lights"]
transform = Transform( -0.00019513, -3.5373e-10, -0.0833331, 0.000357142, -8.38373e-13, -8.36271e-07, -1.94793e-10, -0.0833333, 3.54187e-10, -7.53321e-06, -0.191834, -1.99676e-06 )
omni_range = 600.0

[node name="level3" type="Spatial" parent="Tunnels"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2500, 0, 0 )

[node name="torus3" type="CSGTorus" parent="Tunnels/level3"]
transform = Transform( -1.95505e-06, 2800, -5.24537e-07, 0, -0.000122392, -12, -12, -0.000456178, 8.54579e-14, 0, 0, 0 )
use_collision = true
collision_layer = 4
sides = 6
smooth_faces = false
material = ExtResource( 3 )

[node name="lights" type="Spatial" parent="Tunnels/level3/torus3"]
transform = Transform( 1, -3.63798e-12, 0, 0, 1, -2.77556e-17, 0, -2.70723e-19, 1, 0, 0, 0 )

[node name="light16" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27352e-10, -5.91754e-16, -0.0833333, 0.000357143, -8.36343e-13, -3.11727e-12, -1.95148e-10, -0.0833333, 5.93458e-16, 1.68088e-06, 0.435784, 3.8743e-07 )
light_energy = 0.5
omni_range = 600.0

[node name="light17" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, 1.94028e-06, 0.33496, 4.76837e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light18" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, -1.51731e-06, 0.236913, -4.47035e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light19" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, -1.62826e-06, 0.125832, -4.47035e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light20" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, 1.01464e-06, -0.0576907, 2.08616e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light21" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, 1.46822e-06, -0.183622, 3.57628e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light22" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, 1.00148e-06, -0.285345, 2.38419e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light23" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, 2.0719e-07, -0.37845, 5.96046e-08 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="light24" type="OmniLight" parent="Tunnels/level3/torus3/lights"]
transform = Transform( -7.27351e-10, -5.91755e-16, -0.0833333, 0.000357143, -8.36336e-13, -3.11727e-12, -1.95146e-10, -0.0833333, 5.93459e-16, -1.59569e-06, -0.445025, -4.47035e-07 )
light_energy = 0.5
light_indirect_energy = 0.0
omni_range = 600.0

[node name="UI" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.737255, 0.807843, 0.878431, 0.541176 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="UI/End"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -52.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.411765, 0.764706, 0.941176, 0.909804 )
custom_colors/font_outline_modulate = Color( 0.137255, 0.223529, 0.427451, 1 )
text = "Game over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodJob" type="Label" parent="UI/End"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -52.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.411765, 0.764706, 0.941176, 0.909804 )
custom_colors/font_outline_modulate = Color( 0.137255, 0.223529, 0.427451, 1 )
text = "Good Job!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Label" parent="UI/End"]
visible = false
anchor_left = 0.5
anchor_top = 0.817
anchor_right = 0.5
anchor_bottom = 0.817
margin_left = -512.0
margin_top = 5.80002
margin_right = 512.0
margin_bottom = 45.8
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.411765, 0.764706, 0.941176, 0.909804 )
custom_colors/font_outline_modulate = Color( 0.137255, 0.223529, 0.427451, 1 )
text = "Press enter to try again"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -276.0
margin_right = -32.0
margin_bottom = -228.0
custom_colors/font_color = Color( 0.411765, 0.764706, 0.941176, 0.909804 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Score: 0.0"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.0
margin_top = -61.5
margin_right = 383.0
margin_bottom = 61.5
theme = SubResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.913725, 0.937255, 1 )
custom_colors/font_outline_modulate = Color( 0.160784, 0.0509804, 0.729412, 1 )
text = "Level 0"
align = 1
valign = 1
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseAndResume" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_popup" type="Popup" parent="PauseAndResume"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseAndResume/Pause_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.737255, 0.807843, 0.878431, 0.541176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="Label" parent="PauseAndResume/Pause_popup/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -51.5
margin_right = 100.0
margin_bottom = 51.5
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_colors/font_outline_modulate = Color( 0.0784314, 0.188235, 0.454902, 1 )
text = "Game Paused"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseAndResume/Pause_popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -216.0
margin_right = 160.0
margin_bottom = -152.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.831373, 0.980392, 1 )
custom_colors/font_color_pressed = Color( 0.321569, 0.388235, 0.733333, 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="PauseAndResume"]
margin_left = 968.0
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 48.0
theme = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.831373, 0.980392, 1 )
custom_colors/font_color_pressed = Color( 0.321569, 0.388235, 0.733333, 1 )
text = "||"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseAndResume/Pause_popup/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseAndResume/Pause" to="." method="_on_Pause_pressed"]
